plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

mainClassName = 'cz.wake.corgibot.CorgiBot'

group = 'cz.wake.corgibot'
version = '1.3.9'

description = """"""

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

clean { delete "./build" }

shadowJar {
    baseName = 'corgibot'
    classifier = null
    version = null
}

repositories {
    flatDir { dirs 'library' }
    mavenCentral()
    maven { url "https://repo.maven.apache.org/maven2" }
    maven { url "https://m2.chew.pro/releases" }
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    maven {
        name 'duncte123-jfrog'
        url 'https://duncte123.jfrog.io/artifactory/maven'
    }
    maven { url 'https://jitpack.io' }
}

dependencies {

    // JDA
    implementation group: 'net.dv8tion', name: 'JDA', version: '5.0.0-alpha.13'
    implementation group: 'pw.chew', name: 'jda-chewtils', version: '1.24.1'
    implementation group: 'me.duncte123', name: 'botCommons', version: '2.3.9'
    implementation 'com.github.walkyst:lavaplayer-fork:1.3.97'

    // Others
    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
    implementation group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'org.jetbrains', name: 'annotations', version: '23.0.0'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.10'
    implementation group: 'joda-time', name: 'joda-time', version: '2.10.13'
    implementation group: 'com.github.fedy2', name: 'yahoo-weather-java-api', version: '2.0.2'
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
    implementation group: 'org.twitter4j', name: 'twitter4j-stream', version: '4.0.7'
    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
    implementation name: 'ason-1.4.16'
    testImplementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.36'

}
